--- a/Api/Src/composer.json
+++ b/Api/Src/composer.json
@@ -12,7 +12,7 @@
 	],
 	"require" : {
 		"php" : ">=7.3.0",
-		"merlinthemagic/mtm-utilities" : ">=0.0.1"
+		"merlinthemagic/mtm-http" : ">=1.0.2"
 	},
 	"minimum-stability" : "dev"
 }
